<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="250dp"
        android:background="#efefef"
        android:padding="10dp"
        android:textSize="48sp"

        android:gravity="end|bottom"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
         >


    <Button
        android:layout_margin="2dp"
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_7"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:onClick="onDigit"
        tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"

            android:text="@string/_8"
            android:textColor="@color/black"

            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"

            android:text="@string/_9"
            android:textColor="@color/black"

            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:textSize="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Hash"
            android:textColor="@color/black"

            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnfour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:textColor="@color/black"

            android:text="@string/_4"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:textSize="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textColor="@color/black"

            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:text="@string/_6"
            android:textColor="@color/black"

            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:text="@string/Multiply"
            android:textColor="@color/black"

            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:text="@string/_2"
            android:textColor="@color/black"

            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="30dp"
            android:textColor="@color/black"

            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Minus"
            android:textSize="30dp"
            android:textColor="@color/black"

            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:text="@string/_0"
            android:textColor="@color/black"

            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Dot"
            android:textSize="30dp"
            android:textColor="@color/black"

            android:onClick="onDecimal"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/clr"
            android:textColor="@color/black"

            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="30dp"
            android:textColor="@color/black"

            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:textSize="30dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/equal"
            android:textColor="@color/black"

            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</LinearLayout>